--- a/TODO
+++ b/TODO
@@ -3,9 +3,10 @@ Wrapper / guts:
 - Implement method caching
 - Implement can()
 - Fix Color_t lookup and other primitive types
+  (Note: I might have fixed this by accident. SetLineColor(int) now works. Does GetLineColor?)
 - Implement casting
 - Investigate wrapping all/more enums
-- Investigate array conversion vs. memory
+- Investigate array conversion vs. memory (perl->C seems okay. Check C->perl)
 - Investigate references
 - Implement TTree/Branch (arguments-as-return-values)
 - Implement TList? / TFile::GetListOfKeys? => see examples/Basic/bill.pl 
@@ -20,6 +21,8 @@ Wrapper / guts:
      overload CODE dereferencing for TObjects to behave as assignment operators.
      The above C code could become: "$gRandom->(...)".
   ====> While mostly implemented now, this still fails on the const qualifier. Doh.
+- Auto-convert TArrayD argument types to Double_t*'s on demand
+  (same for other TArray*)
 
 Packaging:
 - Investigate ROOT's build system and how SOOT could be integrated
@@ -28,8 +31,11 @@ Packaging:
 
 Documentation / UI:
 - Convert more examples and fix the ensuing madness.
+- Auto-Convert examples/ to POD?
 - Check existing examples/ for FIXME's.
 - ROOTSYS/tutorials to comply with Rene's requirements for inclusion.
+- Document the SOOT <-> ROOT differences
+=> TArray*!
 
 Testing:
 - Much, much more testing...
